--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,6 @@ body {
     align-items: center;
     background: #222;
     padding: 8px 12px;
-    margin-left: 30px;
     border-radius: 1rem;
     max-width: 230px;
 }
@@ -164,28 +163,17 @@ body {
     border-radius: 5px;
 }
 
-.game-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-}
-
-.game-item {
-    background: #1A1A1A;
-    padding: 15px;
-    border-radius: 8px;
-}
-
-.game-item h3 {
-    margin: 10px 0 5px 0;
-    font-size: 16px;
-}
 
 .sidebar {
     width: 280px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.content {
+    margin-left: 10rem;
+    margin-right: 5rem;
 }
 
 .sidebar-section {
