--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,8 @@ body {
     background: #353539;
     border: none;
     color: white;
-    padding: 10px 15px;
+    font-weight: 500;
+    padding: 0.5rem 0.5rem;
     width: 71px;
     border-radius: 5px;
     cursor: pointer;
@@ -60,8 +61,9 @@ body {
 .download {
     background: #26bbff;
     border: none;
+    font-weight: 500;
     color: black;
-    padding: 10px 15px;
+    padding: 0.5rem 0.5rem;
     border-radius: 5px;
     cursor: pointer;
 }
